--- a/components/bootstrap/less/body.less
+++ b/components/bootstrap/less/body.less
@@ -12,50 +12,73 @@ header {
 	margin-bottom:40px;
 	color:#fff;
 	h2 {
-		font-size:28px;
-		line-height: 100%;
+		font-size:33px;
+		line-height: 45px;
 		margin-bottom:10px;
 	}
 	h3 {
-		font-weight: 400;
-		font-size:18px;
+		font-weight: 200;
+		font-size:28px;
 		line-height: 100%;
 	}
 }
 
 .waist {
+  background-image: url(../img/makey-grass.png);
+  background-repeat:no-repeat;
+  background-position:10px 200px;
+  padding-bottom: 300px;
 	h3 {
-		margin: 5px 0 0;
-	}
-}
-
-.featured {
-	float:left;
-	/* width:210px; */
-	width: 172px;
-	background-color:#fff;
-	h4 {
-		color:@gray;
-		margin:10px;
-		font-size:16px;
-		/* height:40px; */
-		height:54px;
+		margin: 5px 0 20px 0;
+		font-size: 19px;
+		line-height: 30px;
+		color: #acd3fc;
+		font-weight: normal;
+		  .cap {
+		  	text-transform: uppercase;
+		  	font-size: 28px;
+		  	margin-right:5px;
+		  	font-weight: bold;
+		  }
 	}
 }
 
 .cool {
 	border-bottom:1px solid #fff;
+	background-color: #fff;
 	margin-bottom:10px;
+	color: black;
 	h4 {
+		font-size: 28px;
+	}
+	h5 {
+		font-size: 20px;
+		text-transform:uppercase;
+		color: #6e6e6e;
 		font-weight: normal;
 	}
+	h6 {
+		font-size: 18px;
+		}
+	.featured {
+		padding: 30px 0;
+		margin-left: 30px;
+		float:left;
+		width: 190px;
+		h4 {
+			color:@gray;
+			margin:10px;
+			font-size:16px;
+			/* height:40px; */
+			height:54px;
+		}
+	}
 }
-
 .join {
 	margin:20px 0 20px 20px;
 }
 
-.window {
+.windows {
 	background-color:#E3EFF6;
 	border-top:6px solid #72CFFD;
 	padding:20px 0;
@@ -63,6 +86,9 @@ header {
 	height:110px;
 	.span2 {
 		text-align: center;
+	}
+	.nobg {
+		background-color: none;
 	}
 }
 .window.yellow {
@@ -74,18 +100,27 @@ header {
 	display: inline-block;
 	.border-top-left-radius(3px);
 	.border-top-right-radius(3px);
-	background-color: #F12E3B;
+	background-color: #c7171d;
 	border-bottom:3px solid #8A1D24;
 	padding:10px;
 	color:#fff;
 	margin-top:5px;
 	margin-bottom:10px;
+	text-decoration: none;
+	hover {
+		background-color: #c7171d;
+	    }
+.button.big {
+		width: 80%;
+		margin-top: 50px;
+		padding: 20px;
+	  }
 }
-.button.grey {
-	background-color: #C4C2C2;
+.button.blue {
+	background-color: #95cbf9;
 	border-bottom:3px solid #666666;
 	padding:10px;
-	color:#4f4f4f;    
+	color:#2d2c54;    
 }
 
 .button.green {
