Updated all links and ready to merg with Bill's copy

--- a/components/bootstrap/less/body.less
+++ b/components/bootstrap/less/body.less
@@ -1,7 +1,8 @@
 body {
-	background-color:#06417f;
+	background:#81c6ea url('../img/star-bg.png') 0 20px repeat-x;
 	color:#fff;
 	text-rendering: optimizeLegibility;
+	padding-bottom:0 !important;
 	iframe {
 		max-width: 100%;
 	}
@@ -29,17 +30,20 @@ header {
   background-position:bottom center;
   padding-bottom: 120px;
 	h3 {
-		margin: 5px 0 20px 0;
-		font-size: 19px;
+		margin: 5px 0 40px 0;
+		font-size: 17px;
 		line-height: 30px;
 		color: #acd3fc;
 		font-weight: normal;
-		  .cap {
+		.cap {
 		  	text-transform: uppercase;
-		  	font-size: 28px;
+		  	font-size: 27px;
 		  	margin-right:5px;
 		  	font-weight: bold;
-		  }
+		}
+		&.last {
+			margin-bottom:0;
+		}
 	}
 	.blue {
 		background-color: #032042;
@@ -116,7 +120,7 @@ header {
 	margin-bottom:10px;
 	text-decoration: none;
 	&:hover {
-		background-color: #c7171d;
+		background-color: #b3151b;
 		color:#fff;
 		text-decoration: none;
 	}
@@ -135,6 +139,32 @@ header {
 	&.block {
 		display: block;
 	}
+	&.big {
+		font-size:1.7em;
+		padding:12px 0;
+	}
+}
+#footer {
+	&.white-bg {
+		margin-bottom:0;
+		padding:30px 0 20px;
+	}
+	h3 {
+		display:inline-block;
+	}
+	.g-plus {
+		margin-top:10px;
+	}
+	.nav-list {
+		margin-bottom:20px;
+		list-style:none;
+		li { float:left; margin-right:49px; 
+			&.last { margin-right:0; }
+		}
+	}
+}
+.red {
+	color:#c7171d;
 }
 .test {
 	height:20px;
