--- a/components/bootstrap/css/bootstrap.css
+++ b/components/bootstrap/css/bootstrap.css
@@ -5414,9 +5414,10 @@ a.badge:focus {
   position: fixed;
 }
 body {
-  background-color: #06417f;
+  background: #81c6ea url('../img/star-bg.png') 0 20px repeat-x;
   color: #fff;
   text-rendering: optimizeLegibility;
+  padding-bottom: 0 !important;
 }
 body iframe {
   max-width: 100%;
@@ -5443,17 +5444,20 @@ header h3 {
   padding-bottom: 120px;
 }
 .waist h3 {
-  margin: 5px 0 20px 0;
-  font-size: 19px;
+  margin: 5px 0 40px 0;
+  font-size: 17px;
   line-height: 30px;
   color: #acd3fc;
   font-weight: normal;
 }
 .waist h3 .cap {
   text-transform: uppercase;
-  font-size: 28px;
+  font-size: 27px;
   margin-right: 5px;
   font-weight: bold;
+}
+.waist h3.last {
+  margin-bottom: 0;
 }
 .waist .blue {
   background-color: #032042;
@@ -5532,7 +5536,7 @@ header h3 {
   text-decoration: none;
 }
 .button:hover {
-  background-color: #c7171d;
+  background-color: #b3151b;
   color: #fff;
   text-decoration: none;
 }
@@ -5550,6 +5554,34 @@ header h3 {
 }
 .button.block {
   display: block;
+}
+.button.big {
+  font-size: 1.7em;
+  padding: 12px 0;
+}
+#footer.white-bg {
+  margin-bottom: 0;
+  padding: 30px 0 20px;
+}
+#footer h3 {
+  display: inline-block;
+}
+#footer .g-plus {
+  margin-top: 10px;
+}
+#footer .nav-list {
+  margin-bottom: 20px;
+  list-style: none;
+}
+#footer .nav-list li {
+  float: left;
+  margin-right: 49px;
+}
+#footer .nav-list li.last {
+  margin-right: 0;
+}
+.red {
+  color: #c7171d;
 }
 .test {
   height: 20px;
