--- a/components/bootstrap/css/bootstrap.css
+++ b/components/bootstrap/css/bootstrap.css
@@ -5560,7 +5560,7 @@ header h3 {
   padding: 12px 0;
 }
 #footer.white-bg {
-  margin-bottom: 0;
+  margin: 18px 0 0;
   padding: 30px 0 20px;
 }
 #footer h3 {
@@ -5585,4 +5585,54 @@ header h3 {
 }
 .test {
   height: 20px;
+}
+.lower-area {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+.lower-area h4 {
+  font-size: 24px;
+  line-height: 32px;
+}
+.feature-box {
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  min-height: 350px;
+  text-align: center;
+}
+.feature-box p {
+  font-size: 18px;
+  line-height: 24px;
+}
+.feature-box h4 {
+  font-size: 28px;
+}
+.feature-box h5 {
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: normal;
+}
+.features-box-content {
+  min-height: 275px;
+  margin-bottom: 20px;
+}
+.feature-box .button.blue {
+  width: 190px;
+  font-size: 24px ;
+  line-height: 32px;
+  font-weight: 600;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.button.blue {
+  font-size: 24px ;
+  line-height: 32px;
+  font-weight: 600;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.lower-gradation {
+  background-image: url(/images/lower-bg-01.jpg);
+  background-repeat: repeat-y;
 }
